# zypper-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
solv-sys/: Cargo.toml  build.rs  wrapper.h
zypp-rs/: Cargo.toml
zypp-rs/src/: error.rs  lib.rs  repoinfo.rs  repomanager.rs
zypp-rs/src/media/: driver.rs  manager.rs  mod.rs  spec.rs
zypp-rs/src/media/drivers/: http.rs
zypp-rs/src/solv/: mod.rs  pool.rs  repository.rs
zypper-rs/: Cargo.toml
zypper-rs/src/: main.rs
