[package]
name = "zypp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpgme = "0.11.0"
solv-sys = { path = "../solv-sys" }
thiserror = "1.0.40"
tokyo = "1.0.0"
tribool = "0.3.0"
url = { version = "2", features = ["serde"] }
log = "0.4.19"
configparser = "3.0.2"
