[package]
name = "zypper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zypp-rs = { path = "../zypp-rs" }
tokio = { version="1", features=["full"] }
url = { version = "2", features = ["serde"] }
